--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/node": "^8.2.5",
-    "astro": "^4.5.13"
+    "astro": "^4.5.13",
+    "gsap": "^3.12.5"
   }
 }
